--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								</header>
 								<ul>
 									<li><a href="index.html">Homepage</a></li>
-									<li><a href="https://github.com/garciaatech"  target="_blank" >GitHub</a></li>
+									<li><a href="https://github.com/PatAlva/WSTproject"  target="_blank" >GitHub</a></li>
 									<li><a href="timelinelgbt.html">View LGBT History and Rights Timeline</a></li>
 									<li><a href="timelinewomen.html">View Womens History and Rights Timeline</a></li>
 									<li><a href="lgbt.html">View LGBT History and Rights Research</a></li>
