--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 										<p> Fix </p>
 									</div>
 									<span class="image object">
-										<img src="images/banner.png" alt="" />
+										<img src="images/banner.jpg" alt="" />
 									</span>
 								</section>
 
