--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Women/LGBT History and Rights in Japan</strong> by Patricia Alvarez Gordillo</a>
+									<a href="index.html" class="logo"><strong>Women/LGBT History and Rights in Japan</strong> by Patricia Alvarez Gordillo PID:6177148</a>
 									<ul class="icons">
+										<a href="https://github.com/PatAlva/WSTproject"  target="_blank" >Visit the Code in Github</a>
 										<li><a href="https://github.com/PatAlva/WSTproject" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 								</header>
@@ -29,11 +30,31 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Fix<br />
-											Fix</h1>
-											<p> Fix </p>
+											<h1>Historical Research Project<br /></h1>
+											<p>Womens and LGBT Japan Informational Website created to demonstrate 
+												the lack of rights and social acceptance</p>
 										</header>
-										<p> Fix </p>
+										<p>Women in Japan were recognized as having equal legal rights
+											 to men after World War II and LGBT sexual relations has been legal in Japan 
+											 since 1880, however rights and social status for women and LGBT remain unbalanced compared
+											 to men or hetersexual counterparts. <u>The highlight area for this website is the history of 
+												women and LGBT within Japans society and culture and how women’s rights and LGBT rights have 
+												been impacted by society and historical events.</u> This will include achievements made by both women 
+											 and LGBT to continue towards the path of human rights, the many ways in which women and LGBT people 
+											 are attempting to bring awareness and educate Japan on these issues, and the response of Japans 
+											 society and how their opinions have changed over the years.
+											</p>
+											
+											<section>
+
+											<p>Japan although historically accepting and empowering LGBT and women have become 
+												westernized to the point where Japan has dramatically forgotten about its past 
+												and the achievements made by LGBT and women for the future of Japan.
+											   </p>
+
+											</section>
+
+
 									</div>
 									<span class="image object">
 										<img src="images/banner.jpg" alt="" />
@@ -108,8 +129,8 @@
 									<h2>Menu</h2>
 								</header>
 								<ul>
-									<li><a href="index.html">Homepage</a></li>
-									<li><a href="https://github.com/PatAlva/WSTproject"  target="_blank" >GitHub</a></li>
+									<!--<li><a href="index.html">Homepage</a></li>-->
+									<li><a href="https://github.com/PatAlva/WSTproject"  target="_blank" >Visit the Code in Github</a></li>
 									<li><a href="timelinelgbt.html">View LGBT History and Rights Timeline</a></li>
 									<li><a href="timelinewomen.html">View Womens History and Rights Timeline</a></li>
 									<li><a href="lgbt.html">View LGBT History and Rights Research</a></li>
