--- a/timelinelgbt.html
+++ b/timelinelgbt.html
@@ -163,78 +163,224 @@ body {
   </section>
 
 <div class="timeline">
-  <div class="container left">
-    <div class="content">
-      <h2>2017</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-      <a class="image"><img src="images/" alt="" /></a>
-    </div>
-  </div>
   <div class="container right">
     <div class="content">
-      <h2>2016</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-      <a class="image"><img src="images/" alt="" /></a>
-    </div>
-  </div>
-  <div class="container left">
-    <div class="content">
-      <h2>2015</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-      <a class="image"><img src="images/" alt="" /></a>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2>2012</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>Tokugawa period / Pre-Meiji period</h2>
+      <p>Relationships inside Buddhist monasteries were usually between 
+        an older partner who would be a monk or a priest, while the 
+        younger partner would be a prepubescent boy.</p>
+        <p>Some of the Shinto gods, especially Hachiman, Myoshin, 
+          Shinmei and Tenjin, were known to be guardians of male on male love.
+        </p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
     <div class="content">
-      <h2>2011</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>1872</h2>
+      <p>Sodomy is criminalized to comply with 
+        the new beliefs of Western culture and the Qing legal codes.
+      </p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2>2007</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>1952 to 1962</h2>
+      <p>Subscription-based gay magazine Adonis was published.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
     <div class="content">
-      <h2>2011</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>1975</h2>
+      <p>The first group of women in Japan to publicly identify 
+        as lesbians where published on one issue of a magazine called 
+        Subarashi Onna which in english translates to wonderful women.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2>2007</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>1984</h2>
+      <p>Japan court pases law banning same-sex marriage.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
     <div class="content">
-      <h2>2011</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>1990</h2>
+      <p>The group OCCUR which stands for Japan Association 
+        for the Lesbian and Gay Movement won a court case against 
+        a Tokyo government policy that blocked LGBT youth from using 
+        the Metropolitan House for Youth.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2>2007</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>2001</h2>
+      <p>The Council for Human Rights Promotion suggests that sexual
+        orientation should be included in the nation's civil rights code, 
+        but the Diet refused to adopt the recommendation.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2003</h2>
+      <p>The government agency that operates government housing 
+       (the Urban Renaissance Agency) has allowed same-sex couples to 
+       rent units the same way as heterosexual couples at any one of 
+       the over 300 properties that it operates.</p>
+       <p>A law is passed allowing transgender people to change their 
+         gender marker on legal documents to their prefered gender.</p>
+        <p>Aya Kamikawa becomes the first openly transgender politician to be 
+          elected to public office in Japan after winning a seat on the 
+          Setagaya Ward Assembly.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2005</h2>
+      <p>Kanako Otsuji became the first openly gay politician 
+        in Japan when she formally went public at the Tokyo 
+        Gay Pride Festival.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2006</h2>
+      <p>Ataru Nakamura, singer-songwriter and actress
+        was one of the first transgender personalities to 
+        become highly popular in Japan.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2009</h2>
+      <p>Japan began allowing Japanese nationals to 
+        marry same-sex partners in countries where same-sex 
+        marriage is legal.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+<div class="container left">
+  <div class="content">
+    <h2>2011</h2>
+    <p>Fashion model Hiromi came out publicly as a lesbian.</p>
+    <p>Taiga Ishikawa becomes the first openly gay man elected 
+      to office in Japan.</p>
+    <a class="image"><img src="images/" alt="" /></a>
   </div>
 </div>
-
+<div class="container right">
+  <div class="content">
+    <h2>2012</h2>
+    <p>The Hyogowyers' Association suggests that a 
+      transgender woman in a male prison be transferred 
+      to a female institution.</p>
+    <a class="image"><img src="images/" alt="" /></a>
+  </div>
+</div>
+<div class="container left">
+  <div class="content">
+    <h2>2013</h2>
+    <p>Yodogawa-ku, Osaka, becomes the first Japanese government section 
+      to pass a act officiating support for LGBT inclusion, 
+      including mandating LGBT sensitivity training for staff.</p>
+    <a class="image"><img src="images/" alt="" /></a>
+  </div>
+</div>
+<div class="container right">
+  <div class="content">
+    <h2>2015</h2>
+    <p>The ward of Shibuya announced plans to create 
+      a partnership system that would recognize same-sex couples 
+      for situations such as hospital visits and shared renting of 
+      apartments.</p>
+    <a class="image"><img src="images/" alt="" /></a>
+  </div>
+</div>
+<div class="container left">
+  <div class="content">
+    <h2>2017</h2>
+    <p>The Education Ministry adds sexual orientation and 
+      gender identity to its national bullying policy.</p>
+      <p>Osaka recognizes a same-sex couple as 
+        foster parents.</p>
+        <p>Tomoya Hosoda was elected to the Iruma Assembly, 
+          in the prefecture of Saitama. Hosoda is believed 
+          to be the first openly transgender man elected to
+          public office in the world.</p>
+    <a class="image"><img src="images/" alt="" /></a>
+  </div>
+</div>
+<div class="container right">
+  <div class="content">
+    <h2>2018</h2>
+    <p>The Tokyo Metropolitan Assembly passes a law prohibiting 
+      discrimination on the basis of sexual orientation and gender identity at schools.</p>
+      <p>The Ministry of Health, Labor and Welfare revised the Model 
+        Rules of Employment to prohibit discrimination 
+         based on sexual orientation and gender identification in the job market.</p>
+        <p>The city of Kunitachi passed an "anti-outing" 
+          ordinance to push for the understanding of LGBT people.</p>
+          <p>Transgender people are covered for sex reassignment 
+            surgery as long as the person is not receiving hormone treatment.</p>
+    <a class="image"><img src="images/" alt="" /></a>
+  </div>
+</div>
+<div class="container left">
+  <div class="content">
+    <h2>2019</h2>
+    <p>In Ibaraki Prefecture a legislation banning discrimination 
+      against sexual minorities passes.</p>
+      <p>A committee of the ruling Liberal Democratic Party announced
+         the LGBT Understanding and Enhancement Bill that aimed to 
+         improve the understanding of LGBT issues.</p>
+        <p>Maria Akasaka, a trans woman becomes a member of the Kameoka City 
+          Assembly.</p>
+          <p>Ayako Fuchigami a trans woman wins a seat on the Hokkaido 
+            Prefectural Assembly Becoming the first openly transgender person 
+            to hold a prefectural assembly position in Japan.</p>
+            <p>Male same-sex relationships become visible 
+              with the popular TV drama "What Did You Eat Yesterday?".</p>
+    <a class="image"><img src="images/" alt="" /></a>
+  </div>
+</div>
+<div class="container right">
+  <div class="content">
+    <h2>2020</h2>
+    <p>96 human rights and LGBT organizations send a letter to the 
+      Prime Minister calling for a LGBT non-discrimination law.</p>
+      <p>Several Japanese love hotels were denying entrance to same-sex 
+        couples on the gorunds of their sexual orientation, in spite of it 
+        being illegal under federal law.</p>
+        <p>Human Rights watchers write a letter encouraging Japan officials to 
+          allow transgender women to enroll in public women's universities and colleges
+          in the country.</p>
+    <a class="image"><img src="images/" alt="" /></a>
+  </div>
+</div>
+<div class="container left">
+  <div class="content">
+    <h2>2021</h2>
+    <p>A district court in Sapporo ruled that regulations 
+      that restrict same-sex couples of the right to marry constitute 
+      unlawful discrimination and violate Article 14 of the Constitution 
+      of Japan.</p>
+      <p>The LDP announces it will pass the LGBT Understanding and 
+        Enhancement Bill that requires the government to push for the 
+        understanding of LGBT people, however does not actually ban 
+        discrimination.</p>
+    <a class="image"><img src="images/" alt="" /></a>
+  </div>
+</div>
+</div>
 
 		<!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
@@ -257,7 +403,7 @@ body {
   </section>
 
 <footer id="footer">
-  <p class="copyright">&copy; Patricia Alvarez Gordillo. All rights reserved.</a></p>
+  <p class="copyright">&copy; Patricia Alvarez Gordillo PID:6177148. All rights reserved.</a></p>
 </footer>
 
 </html>
