update main page

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						<!-- Section -->
 							<section>
 								<header class="major">
-									<h2>Contact</h2>
+									<h2>Contact Patricia Alvarez Gordillo PID:6177148</h2>
 								</header>
 								<p>For any questions about the website or more information, feel free to contact:</p>
 								<ul class="contact">
@@ -151,7 +151,7 @@
 
 						<Footer>
 							<footer id="footer">
-								<p class="copyright">&copy; Patricia Alvarez Gordillo. All rights reserved.</a></p>
+								<p class="copyright">&copy; Patricia Alvarez Gordillo PID:6177148. All rights reserved.</a></p>
 							</footer>
 
 					</div>
