--- a/timelinewomen.html
+++ b/timelinewomen.html
@@ -165,40 +165,239 @@ body {
 <div class="timeline">
   <div class="container left">
     <div class="content">
-      <h2>2017</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>Nara Period</h2>
+      <p>Of the eight empresses that ruled Japan only six reigned.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2>2016</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>Heian Period</h2>
+      <p>The matriarchal family system that dominated Japanese social 
+        structures in ancient times is still in place. </p>
+        <p>Female feudal lords and independent women artists and 
+          writers left a distinct "feminine" imprint on the culture.</p>
+          <p>Women started inheriting property under their own 
+            names and manage it by themselves.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
     <div class="content">
-      <h2>2015</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>Edo period</h2>
+      <p>Prostitutes flirt with members of the Imperial court, 
+        are setting the fashion trends and are enjoying a social 
+        standing higher than that of noble ladies.</p>
+        <p>Daughters are often sold, a pregnancy that 
+          results in a daughter are called a dog stomach and twin daughters 
+          are regularly abandoned.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2>2012</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>Meiji period</h2>
+      <p>Many girls marry at age 16.</p>
+      <p>Motherhood is the central task of women, and the 
+        education of women is allowed.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
     <div class="content">
-      <h2>2011</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <h2>1867</h2>
+      <p>Women need passports to travel on the Kiso Road.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
+    <div class="content">
+      <h2>1871</h2>
+      <p>Education code established that students should be educated 
+        without any distinction of class or sex.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>1872</h2>
+      <p>The Japanese government issues a decree which states: "Any remaining
+         practices of female exclusion on shrine and temple lands
+          shall be immediately abolished, and mountain climbing for
+           the purpose of worship, etc., shall be permitted". </p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>1898</h2>
+      <p>Cruelty is added to the grounds for a woman to divorce.</p>
+      <p>The law also allows divorce through a mutual agreement of 
+        the husband and wife.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>1908</h2>
+      <p>Husbands are no longer permitted to murder wives for infidelity.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>1910</h2>
+      <p>Few universities accept women.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>1919</h2>
+      <p>Raicho Hiratsuka creates the New Woman Association named 
+        Shin Fujin Kyokai with the goal to achieve rights of 
+        protection and inclusion through identifying a female class.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>1920</h2>
+      <p>The fight for women's political inclusion is at the 
+        forefront of the suffrage movement.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>1921</h2>
+      <p>The parliament of Japan overruled Article 5 
+        of the Police Security Act and grant women the right 
+        to attend political meetings.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>1923</h2>
+      <p>100 leaders from multiple organizations come together to 
+        form the Tokyo Federation of Women's Organizations.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>1924</h2>
+      <p>The Women's Suffrage League is founded.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>1925</h2>
+      <p>Parliament passes the universal manhood suffrage bill, 
+        permitting men to vote free from any economic qualifications, 
+        excluding women.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>1930</h2>
+      <p>Arranged marriages continue and "love matches" are 
+        thought to be scandalous, specifically for the 
+        husbands, who are thought to be effeminate and unmanly. 
+        <a href="timelinelgbt.html">Click here to see LGBT Timeline in Japan</a></p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>1945</h2>
+      <p>Women in Japan receive the right to vote.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>1970</h2>
+      <p>The Women's Liberation Front is considered a radical activist group .</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>1978</h2>
+      <p>Only 26 percent of Japanese people believe that women could be 
+        happy without marrying.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>1924</h2>
+      <p>The Women's Suffrage League is founded.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>1980</h2>
+      <p>Parents tend to spend more on their sons for private 
+        educational institutions than on their daughters.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>1982</h2>
+      <p>A poll conducted by the Prime Minister’s Office, shows that
+        70 percent of the Japanese people agree that a 
+        woman’s place is in the home and  little girls should be brought 
+        up to be behave like ladies.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>1986</h2>
+      <p>The Equal Employment Opportunity Law takes effect.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>1991</h2>
+      <p>Elementary textbooks for 1992-1996 academic years are found to have a majority of 
+        the main characters in novels and important figures in history 
+        are overwhelmingly male.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>1996</h2>
+      <p>The Japanese government prepares the Plan for Gender Equality 2000.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>1998</h2>
+      <p>The General Assembly of the Anglican Church in Japan starts to ordain women.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>1999</h2>
+      <p>Law is passed that banned discrimination in the work place.</p>
+      <p>Basic law is passed that promotes equal rights for women.</p>
+      <p>The contraceptive pill is legalized.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
     <div class="content">
       <h2>2007</h2>
       <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
