--- a/timelinelgbt.html
+++ b/timelinelgbt.html
@@ -150,11 +150,8 @@ body {
   <section id="banner">
     <div class="content">
       <header>
-        <h1>Fix<br />
-        Fix</h1>
-        <p> Fix </p>
+        <center><h1>Timeline of LGBT History and accomplishments in Japan<br /></h1></center>
       </header>
-      <p> Fix </p>
       <form action="index.html">
         <center><button type="submit">Click to Return Home</button></center>
      </form>
@@ -172,7 +169,7 @@ body {
         <p>Some of the Shinto gods, especially Hachiman, Myoshin, 
           Shinmei and Tenjin, were known to be guardians of male on male love.
         </p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/first.png" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -181,14 +178,14 @@ body {
       <p>Sodomy is criminalized to comply with 
         the new beliefs of Western culture and the Qing legal codes.
       </p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/second.png" alt="" /></a>
     </div>
   </div>
   <div class="container right">
     <div class="content">
       <h2>1952 to 1962</h2>
       <p>Subscription-based gay magazine Adonis was published.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/third.png" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -196,15 +193,13 @@ body {
       <h2>1975</h2>
       <p>The first group of women in Japan to publicly identify 
         as lesbians where published on one issue of a magazine called 
-        Subarashi Onna which in english translates to wonderful women.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+        Subarashii Onnatach which in english translates to wonderful women.</p>
     </div>
   </div>
   <div class="container right">
     <div class="content">
       <h2>1984</h2>
       <p>Japan court pases law banning same-sex marriage.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -214,7 +209,6 @@ body {
         for the Lesbian and Gay Movement won a court case against 
         a Tokyo government policy that blocked LGBT youth from using 
         the Metropolitan House for Youth.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
@@ -223,7 +217,7 @@ body {
       <p>The Council for Human Rights Promotion suggests that sexual
         orientation should be included in the nation's civil rights code, 
         but the Diet refused to adopt the recommendation.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/fourth.jpg" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -238,7 +232,7 @@ body {
         <p>Aya Kamikawa becomes the first openly transgender politician to be 
           elected to public office in Japan after winning a seat on the 
           Setagaya Ward Assembly.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/fifth.jpg" alt="" /></a>
     </div>
   </div>
   <div class="container right">
@@ -247,7 +241,7 @@ body {
       <p>Kanako Otsuji became the first openly gay politician 
         in Japan when she formally went public at the Tokyo 
         Gay Pride Festival.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/sixth.jpg" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -256,7 +250,7 @@ body {
       <p>Ataru Nakamura, singer-songwriter and actress
         was one of the first transgender personalities to 
         become highly popular in Japan.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/seventh.jpg" alt="" /></a>
     </div>
   </div>
   <div class="container right">
@@ -265,7 +259,6 @@ body {
       <p>Japan began allowing Japanese nationals to 
         marry same-sex partners in countries where same-sex 
         marriage is legal.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
 <div class="container left">
@@ -274,7 +267,7 @@ body {
     <p>Fashion model Hiromi came out publicly as a lesbian.</p>
     <p>Taiga Ishikawa becomes the first openly gay man elected 
       to office in Japan.</p>
-    <a class="image"><img src="images/" alt="" /></a>
+    <a class="image"><img src="images/eight.jpg" alt="" /></a>
   </div>
 </div>
 <div class="container right">
@@ -283,7 +276,6 @@ body {
     <p>The Hyogowyers' Association suggests that a 
       transgender woman in a male prison be transferred 
       to a female institution.</p>
-    <a class="image"><img src="images/" alt="" /></a>
   </div>
 </div>
 <div class="container left">
@@ -292,7 +284,6 @@ body {
     <p>Yodogawa-ku, Osaka, becomes the first Japanese government section 
       to pass a act officiating support for LGBT inclusion, 
       including mandating LGBT sensitivity training for staff.</p>
-    <a class="image"><img src="images/" alt="" /></a>
   </div>
 </div>
 <div class="container right">
@@ -302,7 +293,6 @@ body {
       a partnership system that would recognize same-sex couples 
       for situations such as hospital visits and shared renting of 
       apartments.</p>
-    <a class="image"><img src="images/" alt="" /></a>
   </div>
 </div>
 <div class="container left">
@@ -313,10 +303,9 @@ body {
       <p>Osaka recognizes a same-sex couple as 
         foster parents.</p>
         <p>Tomoya Hosoda was elected to the Iruma Assembly, 
-          in the prefecture of Saitama. Hosoda is believed 
-          to be the first openly transgender man elected to
+          in the prefecture of Saitama and is the first openly transgender man elected to
           public office in the world.</p>
-    <a class="image"><img src="images/" alt="" /></a>
+    <a class="image"><img src="images/ninth.jpg" alt="" /></a>
   </div>
 </div>
 <div class="container right">
@@ -331,7 +320,6 @@ body {
           ordinance to push for the understanding of LGBT people.</p>
           <p>Transgender people are covered for sex reassignment 
             surgery as long as the person is not receiving hormone treatment.</p>
-    <a class="image"><img src="images/" alt="" /></a>
   </div>
 </div>
 <div class="container left">
@@ -344,12 +332,12 @@ body {
          improve the understanding of LGBT issues.</p>
         <p>Maria Akasaka, a trans woman becomes a member of the Kameoka City 
           Assembly.</p>
-          <p>Ayako Fuchigami a trans woman wins a seat on the Hokkaido 
+          <p>Ayako Fuchigami, a trans woman wins a seat on the Hokkaido 
             Prefectural Assembly Becoming the first openly transgender person 
             to hold a prefectural assembly position in Japan.</p>
             <p>Male same-sex relationships become visible 
               with the popular TV drama "What Did You Eat Yesterday?".</p>
-    <a class="image"><img src="images/" alt="" /></a>
+    <a class="image"><img src="images/tenth.jpg" alt="" /></a>
   </div>
 </div>
 <div class="container right">
@@ -363,7 +351,6 @@ body {
         <p>Human Rights watchers write a letter encouraging Japan officials to 
           allow transgender women to enroll in public women's universities and colleges
           in the country.</p>
-    <a class="image"><img src="images/" alt="" /></a>
   </div>
 </div>
 <div class="container left">
@@ -377,7 +364,7 @@ body {
         Enhancement Bill that requires the government to push for the 
         understanding of LGBT people, however does not actually ban 
         discrimination.</p>
-    <a class="image"><img src="images/" alt="" /></a>
+    <a class="image"><img src="images/eleventh.png" alt="" /></a>
   </div>
 </div>
 </div>
