--- a/timelinelgbt.html
+++ b/timelinelgbt.html
@@ -146,9 +146,14 @@ body {
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
 
+
   <!-- Banner -->
   <section id="banner">
     <div class="content">
+      <!-- Header -->
+     <header id="header">
+      <center><a href="index.html" class="logo"><strong>Women/LGBT History and Rights in Japan</strong> by Patricia Alvarez Gordillo PID:6177148</a></center>
+    </header>
       <header>
         <center><h1>Timeline of LGBT History and accomplishments in Japan<br /></h1></center>
       </header>
@@ -385,6 +390,10 @@ body {
         <form action="index.html">
           <center><button type="submit">Click to Return Home</button></center>
        </form>
+       <!-- Header -->
+     <header id="header">
+      <center><a href="index.html" class="logo"><strong>Women/LGBT History and Rights in Japan</strong> by Patricia Alvarez Gordillo PID:6177148</a></center>
+    </header>
     </div>
     </span>
   </section>
