--- a/timelinewomen.html
+++ b/timelinewomen.html
@@ -150,11 +150,9 @@ body {
   <section id="banner">
     <div class="content">
       <header>
-        <h1>Fix<br />
-        Fix</h1>
-        <p> Fix </p>
+        <center><h1>Timeline of Womens History and accomplishments in Japan<br /></h1></center>
       </header>
-      <p> Fix </p>
+
       <form action="index.html">
         <center><button type="submit">Click to Return Home</button></center>
      </form>
@@ -399,8 +397,108 @@ body {
   </div>
   <div class="container left">
     <div class="content">
+      <h2>2000</h2>
+      <p>A study done in Japan shows that two thirds of Japanese women said they been victims of violence or verbal abuse, 
+        a quarter of Japanese women said they had been victims of serous acts of violence and sixteen percent 
+        said they had been beaten or kicked.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2001</h2>
+      <p>The Cabinet Office is created, and the Council for Gender Equality 
+        and the Gender Equality Bureau are placed within the Cabinet Office.</p>
+      <p>Anti-domestic violence legislation is passed.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2003</h2>
+      <p>Former Prime Minister Yoshiro Mori stated that women who didn’t have 
+        children where diminishing their responsibilities and should be denied their pensions.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2005</h2>
+      <p>42.5 percent of women ion Japan have at least some post-secondary education.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2006</h2>
+      <p>Japan ranks 11th among 12 industrialized nations in the proportion of women 
+        among all national assembly members, at 9.4 percent.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
       <h2>2007</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <p>190 women, a record number, won seats in elections for prefectural assemblies.</p>
+      <p>Japanese Health, Labor and Welfare minister Hakuo Yanagisawa is widely condemned for 
+        calling women “birth-giving machines” in a speech on the declining birth rate.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2008</h2>
+      <p>Two women are named to the new 17-member cabinet.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2012</h2>
+      <p>98.1% of female students and 97.8% of male students are now able to reach senior high school.</p>
+      <p>A government survey showed that more than half of the Japanese public supports the idea that husbands should 
+        be the workers and providers while wives should stay home, raise children, and do housework.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2014</h2>
+      <p>Women make up 42.7% of the labour force of Japan.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2015</h2>
+      <p>Article 733 of Japan’s Civil Code that states that women cannot remarry 6 months after divorce 
+        is now reduced to 100 days, any child born after 200 days of remarriage is the legal child of the current husband,
+        and any woman who is not pregnant during the divorce to remarry immediately after divorce.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2016</h2>
+      <p>Yuriko Koike become the first female governor of Tokyo.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>2018</h2>
+      <p>Tokyo Medical University has been exposed to prioritizing male applicants to enter 
+        the medical school when female applicants had been scoring higher on their entrance exams.</p>
+        <p>Japanese bullfighting organizers lifted a ban on women entering the bullfighting ring.</p>
+      <a class="image"><img src="images/" alt="" /></a>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>2020</h2>
+      <p>In Japan's parliament women hold slightly less than 10% of seats despite a government goal for 
+        30% of elected officials to be women.</p>
+        <p>Yuriko Koike, the first female governor of Tokyo is re-elected.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
