--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
 								<footer id="footer">
-									<p class="copyright">&copy; Patricia Alvarez Gordillo. All rights reserved.</a></p>
+									<p class="copyright">&copy; Patricia Alvarez Gordillo PID:6177148. All rights reserved.</a></p>
 								</footer>
 
 						</div>
