--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 											<span class="icon solid fa-rainbow"></span>
 											<div class="content">
 												<h3>LGBT History and Rights in Japan Research</h3>
-												<p>History of LGBT and LGBT rights with embedded youtube video and downloadable informational PDF.</p>
+												<p>History of LGBT and LGBT rights.</p>
 											</div>
 											<ul class="actions">
 												<li><a href="lgbt.html" class="button big">Click to access</a></li>
@@ -102,7 +102,7 @@
 											<span class="icon solid fa-female"></span>
 											<div class="content">
 												<h3>Womens History and Rights in Japan Research</h3>
-												<p>History of women and womens rights with embedded youtube video and downloadable informational PDF.</p>
+												<p>History of women and womens rights.</p>
 											</div>
 											<ul class="actions">
 												<li><a href="women.html" class="button big">Click to access</a></li>
