--- a/timelinelgbt.html
+++ b/timelinelgbt.html
@@ -392,7 +392,15 @@ body {
        </form>
        <!-- Header -->
      <header id="header">
+      <center><a></a><b> ----- </b></a></center>
+      <center><a></a><b>Acknowledgements</b></a></center>
+      <center><a></a><b> ----- </b></a></center>
+      <center><a></a>Voon, C. (2017, July 10). The rainbow of Japan's LGBTQ identity, captured in photos. Hyperallergic. from https://hyperallergic.com/387992/edges-of-the-rainbow-japan-lgbtq/.</a></center>
+      <center><a></a>Hideki, S. (2006, January 12). Japan's gay history. Intersections. from http://intersections.anu.edu.au/issue12/sunagawa.html.</a></center>
+      <center><a></a>Koichi. (2015, September 30). The gay of the samurai. Tofugu. from https://www.tofugu.com/japan/gay-samurai/.</a></center>
+      <center><a></a><b> ----- </b></a></center>
       <center><a href="index.html" class="logo"><strong>Women/LGBT History and Rights in Japan</strong> by Patricia Alvarez Gordillo PID:6177148</a></center>
+      
     </header>
     </div>
     </span>
