--- a/timelinewomen.html
+++ b/timelinewomen.html
@@ -165,7 +165,7 @@ body {
     <div class="content">
       <h2>Nara Period</h2>
       <p>Of the eight empresses that ruled Japan only six reigned.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/w.jpg" alt="" /></a>
     </div>
   </div>
   <div class="container right">
@@ -177,7 +177,6 @@ body {
           writers left a distinct "feminine" imprint on the culture.</p>
           <p>Women started inheriting property under their own 
             names and manage it by themselves.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -189,7 +188,6 @@ body {
         <p>Daughters are often sold, a pregnancy that 
           results in a daughter are called a dog stomach and twin daughters 
           are regularly abandoned.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
@@ -198,14 +196,13 @@ body {
       <p>Many girls marry at age 16.</p>
       <p>Motherhood is the central task of women, and the 
         education of women is allowed.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/w2.png" alt="" /></a>
     </div>
   </div>
   <div class="container left">
     <div class="content">
       <h2>1867</h2>
       <p>Women need passports to travel on the Kiso Road.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
@@ -213,7 +210,6 @@ body {
       <h2>1871</h2>
       <p>Education code established that students should be educated 
         without any distinction of class or sex.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -223,7 +219,6 @@ body {
          practices of female exclusion on shrine and temple lands
           shall be immediately abolished, and mountain climbing for
            the purpose of worship, etc., shall be permitted". </p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
@@ -232,21 +227,18 @@ body {
       <p>Cruelty is added to the grounds for a woman to divorce.</p>
       <p>The law also allows divorce through a mutual agreement of 
         the husband and wife.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
     <div class="content">
       <h2>1908</h2>
       <p>Husbands are no longer permitted to murder wives for infidelity.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
     <div class="content">
       <h2>1910</h2>
       <p>Few universities accept women.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -255,7 +247,6 @@ body {
       <p>Raicho Hiratsuka creates the New Woman Association named 
         Shin Fujin Kyokai with the goal to achieve rights of 
         protection and inclusion through identifying a female class.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
@@ -263,7 +254,7 @@ body {
       <h2>1920</h2>
       <p>The fight for women's political inclusion is at the 
         forefront of the suffrage movement.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/w3.png" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -272,7 +263,7 @@ body {
       <p>The parliament of Japan overruled Article 5 
         of the Police Security Act and grant women the right 
         to attend political meetings.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/w4.png" alt="" /></a>
     </div>
   </div>
   <div class="container right">
@@ -280,14 +271,12 @@ body {
       <h2>1923</h2>
       <p>100 leaders from multiple organizations come together to 
         form the Tokyo Federation of Women's Organizations.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
     <div class="content">
       <h2>1924</h2>
       <p>The Women's Suffrage League is founded.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
@@ -296,7 +285,6 @@ body {
       <p>Parliament passes the universal manhood suffrage bill, 
         permitting men to vote free from any economic qualifications, 
         excluding women.</p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -306,14 +294,13 @@ body {
         thought to be scandalous, specifically for the 
         husbands, who are thought to be effeminate and unmanly. 
         <a href="timelinelgbt.html">Click here to see LGBT Timeline in Japan</a></p>
-      <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
   <div class="container right">
     <div class="content">
       <h2>1945</h2>
       <p>Women in Japan receive the right to vote.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/w5.jpg" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -392,7 +379,7 @@ body {
       <p>Law is passed that banned discrimination in the work place.</p>
       <p>Basic law is passed that promotes equal rights for women.</p>
       <p>The contraceptive pill is legalized.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/w7.jpeg" alt="" /></a>
     </div>
   </div>
   <div class="container left">
@@ -424,7 +411,7 @@ body {
   <div class="container right">
     <div class="content">
       <h2>2005</h2>
-      <p>42.5 percent of women ion Japan have at least some post-secondary education.</p>
+      <p>42.5 percent of women in Japan have at least some post-secondary education.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
@@ -432,7 +419,7 @@ body {
     <div class="content">
       <h2>2006</h2>
       <p>Japan ranks 11th among 12 industrialized nations in the proportion of women 
-        among all national assembly members, at 9.4 percent.</p>
+        among all national assembly members at 9.4 percent.</p>
       <a class="image"><img src="images/" alt="" /></a>
     </div>
   </div>
@@ -481,7 +468,7 @@ body {
     <div class="content">
       <h2>2016</h2>
       <p>Yuriko Koike become the first female governor of Tokyo.</p>
-      <a class="image"><img src="images/" alt="" /></a>
+      <a class="image"><img src="images/w6.jpg" alt="" /></a>
     </div>
   </div>
   <div class="container right">
@@ -514,16 +501,27 @@ body {
 
 </body>
 
-  <!-- Banner -->
-  <section id="banner">
-    <div class="content">
-      <header>
-        <form action="index.html">
-          <center><button type="submit">Click to Return Home</button></center>
-       </form>
-    </div>
-    </span>
-  </section>
+ <!-- Banner -->
+ <section id="banner">
+  <div class="content">
+    <header>
+      <form action="index.html">
+        <center><button type="submit">Click to Return Home</button></center>
+     </form>
+     <!-- Header -->
+   <header id="header">
+    <center><a></a><b> ----- </b></a></center>
+    <center><a></a><b>Acknowledgements</b></a></center>
+    <center><a></a><b> ----- </b></a></center>
+    <center><a></a>Richard Hooker. “ Women and Women’s Communities in Ancient Japan,” Washington State University, http://www.wsu.edu:8080/~dee/ANCJAPAN/WOMEN.HTM</a></center>
+    <center><a></a>Hays, J. (2014, January). Women in Japan: History, character, customs, advancements and violence. Facts and Details. from https://factsanddetails.com/japan/cat18/sub118/item627.html.</a></center>
+    <center><a></a><b> ----- </b></a></center>
+    <center><a href="index.html" class="logo"><strong>Women/LGBT History and Rights in Japan</strong> by Patricia Alvarez Gordillo PID:6177148</a></center>
+    
+  </header>
+  </div>
+  </span>
+</section>
 
 <footer id="footer">
   <p class="copyright">&copy; Patricia Alvarez Gordillo. All rights reserved.</a></p>
