--- a/lgbt.html
+++ b/lgbt.html
@@ -104,7 +104,7 @@
 								</header>
 								<ul>
 									<!--<li><a href="index.html">Homepage</a></li>-->
-									<li><a href="https://github.com/PatAlva/WSTproject"  target="_blank" >Visit the Code in Github</a></li>
+									<li><a href="index.html"  target="_blank" >Return to Home</a></li>
 									<li><a href="timelinelgbt.html">View LGBT History and Rights Timeline</a></li>
 									<li><a href="timelinewomen.html">View Womens History and Rights Timeline</a></li>
 									<li><a href="lgbt.html">View LGBT History and Rights Research</a></li>
