--- a/women.html
+++ b/women.html
@@ -95,8 +95,7 @@
 									<h2>Menu</h2>
 								</header>
 								<ul>
-									<!--<li><a href="index.html">Homepage</a></li>-->
-									<li><a href="index.html"  target="_blank" >Return to Homepage</a></li>
+									<li><a href="index.html">Homepage</a></li>
 									<li><a href="timelinelgbt.html">View LGBT History and Rights Timeline</a></li>
 									<li><a href="timelinewomen.html">View Womens History and Rights Timeline</a></li>
 									<li><a href="lgbt.html">View LGBT History and Rights Research</a></li>
